# ecom-assistant

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Time Estimates.csv  docker-compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
cleaner/: README.md  config.yaml  data_cleaner.py  main.py  model_validators.py  pipeline.py  schema.py  utils.py
cleaner/tests/: test_cleaning.py
data/: .gitignore  README.md
data/analysis/cleaning/20250517_1343/comparisons/: comparison_summary.json
data/analysis/cleaning/20250517_1343/llm/: cleaned_orders_profile.json  cleaned_products_profile.json
data/analysis/cleaning/20250517_1343/metrics/: quality_metrics.json
data/analysis/eda/20250517_1343/llm/: raw_order_data_20250517_1343_profile.json  raw_product_data_20250517_1343_profile.json
data/analysis/eda/20250517_1343/metrics/: raw_data_summary.json
data/processed/analysis/profiles/20250526_172536/orders/: orders_cleaned.html  orders_raw.html
data/processed/analysis/profiles/20250526_172536/products/: products_comparison.html  products_raw.html
data/processed/analysis/profiles/20250527_200946/orders/: orders_cleaned.html  orders_raw.html
data/processed/analysis/profiles/20250527_200946/products/: products_comparison.html  products_raw.html
data/processed/latest/: orders  orders_cleaned.csv  products  products_cleaned.csv
data/processed/runs/20250526_172536/orders/: orders_validation_report.json
data/processed/runs/20250526_172536/products/: products_validation_report.json
data/processed/runs/20250527_200946/orders/: orders_validation_report.json
data/processed/runs/20250527_200946/products/: products_validation_report.json
data/scripts/: config.yaml  data_cleaning.py  data_exploration.py  utils.py
data/test/: orders_cleaned_test.csv  products_cleaned_test.csv
docs/: system_design.md
libs/ecom_shared/: __init__.py  config.py  context.py  errors.py  guardrails.py  health.py  logging.py  metrics.py  middleware.py  models.py
postman/: Postman Testing Guide.md  ecom_assistant_local_env.json  ecom_assistant_postman_collection.json  ecom_assistant_render_env.json
postman/runs/: collection_run_results_0.json  collection_run_results_1.json  collection_run_results_2.json  collection_run_results_3.json  collection_run_results_4 (free Render plan).json
scripts/: get_repo_tree.sh  run_new_tests.sh  start_services.sh
scripts/bootstrap/: bootstrap.sh  init_vector.sh  load_vectors.py
scripts/dev/: run_all_tests.sh  start_local_services.sh  stop_local_services.sh  test_chat_debug_endpoint.sh  test_deployed_chat.sh  test_deployed_health.sh  test_full_stack.sh  test_order_endpoint.sh  test_product_endpoint.sh
services/chat/: Dockerfile  Dockerfile.render  pyproject.toml  start.sh
services/chat/src/chat/: app.py  config.py  models.py  orchestrator.py  session.py
services/chat/src/chat/prompts/: master_system_prompt.j2  order_analysis_guide.py  search_strategy_guide.py  strategy_guide.j2  system_prompt.j2
services/chat/tests/: conftest.py  fake_model.py  helpers.py
services/chat/tests/integration/: conftest.py  test_chat_flow_with_fakemodel.py  test_error_scenarios.py  test_streaming_events.py  test_tool_discovery.py
services/chat/tests/unit/: conftest.py  test_agent_config.py  test_app_endpoints.py  test_mcp_servers.py  test_orchestrator.py
services/order/: Dockerfile  Dockerfile.render  pyproject.toml
services/order/src/order/: app.py  config.py  data_service.py  models.py
services/order/tests/: conftest.py
services/order/tests/integration/: conftest.py  test_mcp_client.py  test_mcp_client_simple.py
services/order/tests/unit/: conftest.py  test_data_service.py  test_service.py
services/product/: Dockerfile  Dockerfile.render  pyproject.toml
services/product/src/product/: app.py  config.py  interfaces.py  models.py
services/product/src/product/services/: data_service.py
services/product/src/product/stores/: chroma_store.py
services/product/tests/: conftest.py
services/product/tests/fixtures/: mock_chromadb.py  sample_products.py
services/product/tests/integration/: test_api_endpoints.py  test_mcp_integration.py  test_mock_integration.py
services/product/tests/unit/: test_data_service.py  test_interfaces.py
