[project]
name = "order-service"
version = "0.4.0"
description = "Order service for e-commerce assistant"
requires-python = ">=3.11"
authors = [
    {name = "Kevin Armengol"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "fastapi-mcp==0.3.4",  # For MCP tool exposure
    "httpx>=0.26.0",       # For TestClient
    "jinja2>=3.1.3",  # <-- Add this line
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "../..", "../../libs"]
asyncio_mode = "auto"  # Add this for pytest-asyncio
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests with mocks",
    "live_integration: Live integration tests requiring real services",
    "slow: Slow tests that may take longer to run",
    "mcp: MCP-specific tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/order"]
