[project]
name = "product-service"
version = "0.4.0"
description = "Product service for e-commerce assistant"
requires-python = ">=3.11"
authors = [
    {name = "Kevin Armengol"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "chromadb>=0.4.24",
    "rapidfuzz>=3.6.1",
    "scikit-learn>=1.4.0",
    "fastapi-mcp==0.3.4",  # For MCP tool exposure
    "httpx>=0.26.0",       # For TestClient
    "jinja2>=3.1.3",  # <-- Add this line
    "sentence-transformers>=4.1.0",

]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --html=test-reports/report.html"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/product"]
